--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,15 @@ temp/
 test/sandbox
 test/.pkgcache/
 .pkgcache/
+intl/MSG.json
+intl/de/*
+intl/es/*
+intl/fr/*
+intl/it/*
+intl/ja/*
+intl/ko/*
+intl/pt/*
+intl/ru/*
+intl/zh-Hans/*
+intl/zh-Hant/*
+intl/zz/*
