--- a/.gitignore
+++ b/.gitignore
@@ -28,15 +28,6 @@ temp/
 test/sandbox
 test/.pkgcache/
 .pkgcache/
-intl/MSG.json
-intl/de/*
-intl/es/*
-intl/fr/*
-intl/it/*
-intl/ja/*
-intl/ko/*
-intl/pt/*
-intl/ru/*
-intl/zh-Hans/*
-intl/zh-Hant/*
-intl/zz/*
+!intl/
+intl/*
+!intl/en/
